--- a/templates/nginx_default.conf.j2
+++ b/templates/nginx_default.conf.j2
@@ -1,6 +1,6 @@
 server {
-  listen 80 default_server;
-  server_name _;
+  listen 80;
+  server_name {{ cloud_fqdn }};
 
   root {{ deploy_path }};
   index index.php index.html;
